--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   text-align: center;
   width: 60%;
   background-color: white;
-  margin: auto;
+  margin: 50px auto;
   min-height: 200vh;
   border-radius: 2%;
+  padding-top: 18px;
 }
