created componetns for for different views and added some css to the navigation bar

--- a/src/navbar.css
+++ b/src/navbar.css
@@ -1,3 +1,8 @@
-.navbar_Brand_Name { 
+.navigationBar {
+  width: 97%;
+  margin: auto;
+  border-radius: 8px;
+}
+.navbar_Brand_Name {
   font-family: cursive;
 }
